--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-soap": "*",
         "artisaninweb/laravel-soap": "^0.3.0",
         "guzzlehttp/guzzle": "^7.2",
         "kreait/firebase-php": "^7.13",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "phpseclib/phpseclib": "~2.0",
+        "lcobucci/jwt": "^5.5",
+        "phpseclib/phpseclib": "^3.0",
         "spatie/laravel-medialibrary": "^10.15",
-        "staudenmeir/eloquent-has-many-deep": "^1.7",
-        "ext-soap": "*"
+        "staudenmeir/eloquent-has-many-deep": "^1.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
