--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "lcobucci/jwt": "^5.5",
+        "opcodesio/log-viewer": "^3.18",
         "phpseclib/phpseclib": "~2.0",
         "spatie/laravel-medialibrary": "^10.15",
         "staudenmeir/eloquent-has-many-deep": "^1.7",
