--- a/.github/workflows/master_trip.yml
+++ b/.github/workflows/master_trip.yml
@@ -1,76 +1,91 @@
-name: Build and Deploy Laravel to Azure
+name: Build and deploy PHP app to Azure Web App - Trip
 
 on:
   push:
     branches:
       - master
-
-permissions:
-  id-token: write     # REQUIRED for Azure federated authentication
-  contents: read
+  workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # --------------------------
-      # PHP Setup & Composer Install
-      # --------------------------
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          extensions: mbstring, pdo, pdo_mysql, bcmath
+          tools: composer
 
-      - name: Install Composer Dependencies
+      - name: Composer install
         run: |
-          composer install --no-dev --prefer-dist --optimize-autoloader
-
-      # --------------------------
-      # Laravel folders
-      # --------------------------
-      - name: Create storage + bootstrap cache
-        run: |
-          mkdir -p storage/framework/{sessions,views,cache}
-          mkdir -p bootstrap/cache
-
-      # --------------------------
-      # Upload Artifact
-      # --------------------------
-      - name: Archive files
-        run: |
-          zip -r app.zip .
+          composer validate --no-check-publish
+          composer install --prefer-dist --no-progress --no-interaction --optimize-autoloader
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app
-          path: app.zip
+          name: php-app
+          path: .
 
-      # --------------------------
-      # Azure Login using Federated Credentials
-      # --------------------------
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      id-token: write
+      contents: read
 
-      # --------------------------
-      # Deploy to Azure Web App
-      # --------------------------
+    steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: app
+          name: php-app
+          path: .
 
-      - name: Deploy ZIP to Azure WebApp
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D564056D927D452E843D2A7A0AE9488D }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A9F8386F60E141FA910EEA2F896499AF }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E3FC7B552C4C437B806DC915921927A9 }}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "YOUR_APP_SERVICE_NAME"
-          package: "app.zip"
+          app-name: 'Trip'
+          slot-name: 'Production'
+          package: .
+
+      # ←←← THE IMPORTANT PART STARTS HERE ←←←
+      - name: Create Laravel directories + permissions + storage link on Azure (after deploy)
+        uses: azure/cli@v2
+        with:
+          azcliversion: 2.66.0
+          inlineScript: |
+            echo "Creating Laravel directories on the live Azure server..."
+            app_dir="/home/site/wwwroot"
+            
+            # Create all required Laravel folders
+            mkdir -p $app_dir/storage/app/public
+            mkdir -p $app_dir/storage/framework/cache/data
+            mkdir -p $app_dir/storage/framework/sessions
+            mkdir -p $app_dir/storage/framework/views
+            mkdir -p $app_dir/storage/logs
+            mkdir -p $app_dir/bootstrap/cache
+
+            # Set correct permissions
+            chmod -R 775 $app_dir/storage
+            chmod -R 775 $app_dir/bootstrap/cache
+
+            # Create storage symlink (important for asset URLs)
+            cd $app_dir
+            php artisan storage:link || true
+
+            # Optional: clear + cache config/routes/views (makes app boot faster)
+            php artisan config:cache || true
+            php artisan route:cache || true
+            php artisan view:cache || true
+
+            echo "Laravel directories created and permissions fixed!"
